FlightPath 6.x Changelog
========================

2022-06-07
  Fixed bug when editing user attributes from the users screen, where if no "fields" index is set, we weren't correctly creating a default
  field called "value" that's a textfield.
  

2022-06-01
  Small modifications to help eliminate bugs in menu items showing in a menu block.
  

2022-05-29
  Adjusted hook.api documentation.
  
  Altered alerts to allow for targetting specific faculty/staff by CWID, and NOT sending the alert to the student's advisor.  Also, if the student_id
  field is left blank, it will show as "N/A" on the Alerts page.  This is useful if you have alerts, sent to specific users, which do not
  directly have anything to do with a student (ie, system alerts).
  
  Adjusted displays to cope with new alerts setup.
  
  Fixed bug with alert counts.
  
    
2022-05-23
  Fixed bug where hook_update() wouldn't be called if the module was under custom/modules/_dirname (beginning with underscore).
  

2022-05-19
  Modified when we render a menu item in HTML, to include more details about its title and path as CSS classes, making it easier
  to theme or hide as needed.
  

2022-05-17
  Fixed bug in permissions where admin_restricted perms were not being saved correctly.
  
  Added a new form element type: "value".  This is a hidden value which must not change.  If it does change from what is defined in the form,
  the form will not validate and an error message will be shown.  This is a security feature so that malicious users cannot change hidden
  field values which are meant to be immutable.
  

2022-05-13
  Made small alteration in DegreePlan, so that if a degree title is blank, we don't see a message like "This groups belongs to" (with no degree
  title) in the Courses Added by Advisor group.
  
  Made content module handle checkboxes a little better.  Instead of saving as serialized array, it saves as a string which can be queried